--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ and others have greatness thrust upon them.</p>
 
 <p><em>-William Shakespeare</em></p>
 
-<img src="tree.jpg" width ="100">
+<src="img/tree.jpg" width ="100">
 
 </body>
 </html>
