--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ and others have greatness thrust upon them.</p>
 
 <p><em>-William Shakespeare</em></p>
 
-<img src="/tree.jpg" width ="100">
+<img src="![tree](https://user-images.githubusercontent.com/96185688/146388211-2f5e37a0-914d-49ed-8f7e-e0695d74a34a.jpg)" width ="100">
 
 </body>
 </html>
