--- a/3.html
+++ b/3.html
@@ -5,7 +5,7 @@
 <title>웹페이지</title>
 </head>
 <body>
-   <h1><a href="웹페이지.html">web</a></h1>
+   <h1><a href="index.html">web</a></h1>
      <ol>
       <li><a href="1.html"> html</a></li>
       <li><a href="2.html"> css</a></li>
