--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 
 <h2>웹사이트만들기</h2>
-안녕 나는 <strong><u><a href="https://www.w3.org/TR/2017/REC-html52-20171214/" title="html5" target="_blank">이매</a></u></strong>인데 지금 웹페이지공부하고있는데 뭘 쓸지 몰라서 일단 쓴다!
+안녕 <strong><u><a href="https://www.w3.org/TR/2017/REC-html52-20171214/" title="html5" target="_blank">html5</a></u></strong> 설명페이지얌.
 <meta charset = "utf-8">
 
 
